@@ -17,7 +17,6 @@
 package org.sonar.java.model.springcontext;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import javax.annotation.Nullable;
 
@@ -144,7 +143,7 @@ public class BeanDefinitionHolder {
 
     public BeanDefinitionHolder build() {
       BeanDefinitionHolder holder = new BeanDefinitionHolder(type, module, beanPackage, location);
-      holder.setDependingBeans(Collections.unmodifiableList(dependingBeans));
+      holder.setDependingBeans(List.copyOf(dependingBeans));
       holder.setProfiles(profiles);
       if (isPrimary) {
         holder.setPrimary();
